Bug 231302 - tellico don't generate report and print
Summary: tellico don't generate report and print
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-19 12:52 UTC by Maurizio Sibaud
Modified: 2010-03-25 04:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maurizio Sibaud 2010-03-19 12:52:03 UTC
Version:           1.3.5 (using KDE 4.4.1)
OS:                Linux
Installed from:    Ubuntu Packages

Hi,
when I try togenerate report, the dialog remain blank; when I try to print show me this error:
Tellico has encountered an error processing XSLT. and if I try to print the output is a blank page.
All the installation is standard from the repositry; the only change I made was to create a custom collection with my own field, except "title".

Thanks
Maurizio Sibaud
Comment 1 Robby Stephenson 2010-03-23 05:35:00 UTC
SVN commit 1106521 by rstephenson:

Fix crashing bug for exporting HTML for collections with no grouping field.

BUG:231302


 M  +4 -0      ChangeLog  
 M  +9 -7      src/translators/htmlexporter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1106521
Comment 2 Maurizio Sibaud 2010-03-23 10:31:11 UTC
After many check, I found the real origin of the problem; it was an imported csv file with some characters don't recognize from tellico; when I, manually, find and change the character, the problem solved.

But, apart the manual work on 4000 record, why tellico have this problem?
Is possible to find a workflow about character table auto-convert base on the input?

Thank for the attention
Maurizio Sibaud
Comment 3 Robby Stephenson 2010-03-23 15:45:29 UTC
If the character causes an incorrect XML formatting, then you would get the error you report. I've seen some scattered reports of this problem before but have not been able to reproduce it yet. Can you either attach part of that CSV file to this bug report, or maybe email it to me privately?
Comment 4 Robby Stephenson 2010-03-25 04:36:30 UTC
SVN commit 1107232 by rstephenson:

Strip control characters (0x00 to 0xFF) from text files on import.

BUG:231302


 M  +4 -0      ChangeLog  
 M  +12 -1     src/translators/textimporter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1107232