Fix crashing bug for exporting HTML for collections with no grouping field.

BUG:231302

svn path=/trunk/extragear/office/tellico/; revision=1106521